--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,9 @@
         <li routerLinkActive="active"><a routerLink="books">Livres</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li routerLinkActive="active"><a routerLink="auth/signup">Créer un compte</a></li>
-        <li routerLinkActive="active"><a routerLink="auth/signin">Connexion</a></li>
+        <li routerLinkActive="active"><a routerLink="auth/signup" *ngIf="!isAuth">Créer un compte</a></li>
+        <li routerLinkActive="active"><a routerLink="auth/signin" *ngIf="!isAuth">Connexion</a></li>
+        <li><a (click)="onSignOut()" style="cursor:pointer" *ngIf="isAuth">Déconnexion</a></li>
       </ul>
     </div>
 </nav>
