--- a/src/app/book-list/book-form/book-form.component.html
+++ b/src/app/book-list/book-form/book-form.component.html
@@ -1,27 +1,32 @@
 <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
-      <h2>Enregistrer un nouveau livre</h2>
+      <h2>New book informations</h2>
+      
       <form [formGroup]="bookForm" (ngSubmit)="onSaveBook()">
+
         <div class="form-group">
-          <label for="title">Titre</label>
-          <input type="text" id="title"
-                 class="form-control" formControlName="title">
+          <label for="title">Title</label>
+          <input type="text" id="title" class="form-control" formControlName="title">
         </div>
+
         <div class="form-group">
-          <label for="author">Auteur</label>
-          <input type="text" id="author"
-                 class="form-control" formControlName="author">
+          <label for="author">Author</label>
+          <input type="text" id="author" class="form-control" formControlName="author">
         </div>
+
         <div class="form-group">
           <label for="synopsis">Synopsis</label>
-          <textarea id="synopsis"
-                    class="form-control" formControlName="synopsis">
-          </textarea>
+          <textarea id="synopsis" class="form-control" formControlName="synopsis"></textarea>
         </div>
-        <button class="btn btn-success" [disabled]="bookForm.invalid"
-                type="submit">Enregistrer
-        </button>
-  
+
+        <div class="form-group">
+          <h4>Add a picture</h4>
+          <input type="file" (change)="detectFiles($event)" class="form-control" accept="image/*">
+          <p class="text-success" *ngIf="fileUploaded">File uploaded !</p>
+        </div>
+
+        <button class="btn btn-success" [disabled]="bookForm.invalid || fileIsUploading" type="submit">Save</button>  
+
       </form>
     </div>
 </div>
