--- a/src/app/book-list/book-form/book-form.component.html
+++ b/src/app/book-list/book-form/book-form.component.html
@@ -21,7 +21,7 @@
 
         <div class="form-group">
           <h4>Add a picture</h4>
-          <input type="file" (change)="detectFiles($event)" class="form-control" accept="images/*">
+          <input type="file" (change)="detectFiles($event)" class="form-control" accept="image/*">
           <p class="text-success" *ngIf="fileUploaded">File uploaded !</p>
         </div>
 
