--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,15 +1,16 @@
 <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
-      <h2>Connexion</h2>
+      <strong>Caution if you don't have an account you have to register first. <a [routerLink]="['/auth','signup']">Register</a></strong>
+      <h2>Connection</h2>
       <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
 
         <div class="form-group">
-          <label for="email">Adresse mail</label>
+          <label for="email">Email</label>
           <input type="text" id="email" class="form-control" formControlName="email">
         </div>
 
         <div class="form-group">
-          <label for="password">Mot de passe</label>
+          <label for="password">Password</label>
           <input type="password" id="password" class="form-control" formControlName="password">
         </div>
 
