--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-      <h2>Liste des livres</h2>
+      <h2>List of books</h2>
       <div class="list-group">
         <button class="list-group-item" *ngFor="let book of books; let i = index" (click)="onViewBook(i)">
           <h3 class="list-group-item-heading"> {{ book.title }}
