--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -12,9 +12,17 @@
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password" id="password" class="form-control" formControlName="password">
+        </div>        
+
+        <div>
+          <button class="btn btn-success" type="submit" [disabled]="signinForm.invalid">Sign In</button>
+          <button 
+            *ngIf="!resetPassword" 
+            class="btn btn-danger" 
+            (click)="sendResetEmail()">Reset Password</button>
+          <p *ngIf="resetPassword" class="text-success">Check your email to reset password!</p>
         </div>
 
-        <button class="btn btn-primary" type="submit" [disabled]="signinForm.invalid">Sign In</button>
       </form>
       <p class="text-danger">{{ errorMessage }}</p>
     </div>
